# chip8-emulator

./: .gitignore  LICENSE  README.md  config.py  cpu.py  example.py  keyboard.py  opcodes.py  pyproject.toml  run.py  screen.py
chip8/: __init__.py  __main__.py  _config.py  _exceptions.py  audio.py  chip8.py  config.py  constants.py  cpu.py  ctypes.py  keyboard.py  keypad.py  opcodes.py  ram.py  screen.py
roms/: person.asm  person.ch8  registers.asm  registers.ch8  tank.asm  test.ch8  walk.ch8
tests/: __init__.py  test_cpu.py  test_keypad.py  test_opcodes.py  test_screen.py
