
[project]
name = "chip8-emulator"
version = "0.2.5"
description = "The Chip8 is a very simple system, originally created as an interpretter for an 8 bit CPU in the 1970s."
license = {text = "MIT License"}
keywords = ["chip8", "emulator", "vintage cpu", "cpu", "python"]
readme = "README.md"
authors = [
    { name = "wyattferguson", email = "wyattxdev@duck.com" }
]
requires-python = ">=3.12"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "click>=8.1.8",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a6",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "taskipy>=1.14.1",
]

[project.urls]
homepage = "https://github.com/wyattferguson/chip8-emulator"
repository = "https://github.com/wyattferguson/chip8-emulator.git"
documentation = "https://github.com/wyattferguson/chip8-emulator"
issues = "https://github.com/wyattferguson/chip8-emulator/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "chip8"
module-root = ""

[project.scripts]
chip8 = "chip8.__main__:run"

[tool.taskipy.tasks]
format = "ruff format ./src/"
lint = "ruff check --fix ./src/"
tests = "pytest --verbose --color=yes tests"
typecheck = "ty check"
run = "chip8"

[tool.ruff]
line-length = 100
fix = true
indent-width = 4
format.indent-style = "space"
target-version = "py312"
include = ["*.py"]
src = ["chip8", "tests"]

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "FA102", # Flake8-future-annotations
    "F401", # Disable fix for unused imports
    "B904", # Allow raising exceptions without from e
    "PLR0913", # too many arguments
    "CPY", # Flake8-copyright
    "T20", # Flake8-print
    "ERA", # Eradicate – detects commented-out code
    "BLE001", # Catch-all exceptions
    "EM102", # f-strings in exceptions
    "TRY003", #  long exception messages
    "D107", # Disable docstring check for __init__
    "D100", # Disable docstring check for public modules
    "D105", # Disable docstring check for magic methods
    "D212", # Disable docstring check for multi-line docstrings
    "EM101", # Disable f-string check in exceptions
    "FBT001", # Boolean positional arguments
    "FBT002", # Default Boolean positional arguments
    "PTH123", # builtin-open
    "S311", # pseudo-random numbers
]

[tool.ty]
src.root = "./chip8"
environment.python = "./.venv"
terminal.output-format = "concise"